test_suite/alan-2022-examples/passing/000121_pair.alan
source RIb4a begin F := array 25947 - false end
