test_suite/alan-2022-examples/failing/005660_mutation.alan
source y09Ga begin leave 711 - = end
